@@ -1,3 +1,7 @@
+2012-12-10  Asterisk Development Team <asteriskteam@digium.com>
+
+	* Asterisk 11.1.0 Released.
+
 2012-12-06  Asterisk Development Team <asteriskteam@digium.com>
 
 	* Asterisk 11.1.0-rc3 Released.
